deployments/k8s/traefik/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: rate-limit
  namespace: vani-ledger

spec:
  rateLimit:
    average: 100
    burst: 50
